[package]
name = "curvedit"
version = "0.1.0"
edition = "2021"

[dependencies]
fso_tables = { path = "../fso-tables-rust/fso_tables" }
fso_tables_impl = { path = "../fso-tables-rust/fso_tables_impl" }
egui = "0.27.2"
eframe = "0.27.2"
egui_plot = "0.27.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
