[package]
name = "curvedit"
version = "1.0.0"
edition = "2021"

[dependencies]
fso_tables_impl = { git = "https://github.com/BMagnu/fso-tables-rust", tag = "v1.0.0" }
egui = "0.27.2"
eframe = "0.27.2"
egui_plot = "0.27.2"
homedir = "0.2.1"
include_dir = "0.7.4"
native-dialog = "0.7.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
